Upgrade e adaptações para JDK 11